# BallBalancingRobot

./: .gitignore  README.md  __main__.py  constants.py  equations.mlx  install.sh  kinematics.py  main.py  path.py  pyproject.toml  requirements.txt  run.py  vision.py
BallBalancingRobot/: __main__.py  kinematics.py  path.py  vision.py
src/: __main__.py  actuation.py  constants.py  control.py  imu.py  kinematics.py  path.py  plot.py  vision.py
tests/: test_imu.py  test_kinematics.py  test_servo.py  test_vision.py
