[project]
name = "ballbalancingrobot"
version = "0.1.0"
description = "3D printed ball-balancing robot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ahrs>=0.3.1",
    "argparse>=1.4.0",
    "numpy>=2.0.2",
    "pigpio>=1.78",
]

[dependency-groups]
dev = [
    "matplotlib>=3.9.2",
    "pytest>=8.4.1",
]

[tool.setuptools]
packages = ["BallBalancingRobot"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
